crates/eure-macros/tests/compile_fail/proxy_tuple_arity_mismatch_into.rs
use eure::IntoEure;

mod external {
    pub struct Target(pub u32, pub u32);
}

#[derive(IntoEure)]
#[eure(proxy = "external::Target")]
struct Proxy(pub u32);

fn main() {}
